--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "devDependencies": {
-    "cypress": "^13.17.0"
+    "cypress": "^13.17.0",
+    "cypress-file-upload": "^5.0.8"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.3.0",
+    "cypress-dotenv": "^3.0.1",
+    "cypress-mochawesome-reporter": "^3.8.2",
+    "cypress-xpath": "^2.0.1",
+    "dotenv": "^16.4.7"
   }
 }
