--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "npx cypress run",
+  },
   "devDependencies": {
     "cypress": "^13.17.0",
     "cypress-file-upload": "^5.0.8"
