--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "test:register": "npx cypress run --spec  cypress/e2e/tests/RegisterTest.cy.js",
     "test:login": "npx cypress run --headed --spec cypress/e2e/tests/LoginTest.cy.js"
   },
- 
   "devDependencies": {
     "cypress": "^13.17.0",
-    "cypress-file-upload": "^5.0.8"
+    "cypress-file-upload": "^5.0.8",
+    "mailslurp-client": "^15.21.0"
   },
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
